--- a/Oicapps/index.css
+++ b/Oicapps/index.css
@@ -19,6 +19,11 @@
    }
 .background-gradient{ 
 background-image: linear-gradient(to bottom right, rgb(19, 1, 19), rgb(199, 10, 199));
+    background-image: -webkit-linear-gradient(top, rgb(19, 1, 19), rgb(199, 10, 199)); 
+background-image:    -moz-linear-gradient(top, rgb(19, 1, 19), rgb(199, 10, 199)); 
+background-image:     -ms-linear-gradient(top, rgb(19, 1, 19),rgb(199, 10, 199)); 
+background-image:      -o-linear-gradient(top, rgb(19, 1, 19), rgb(199, 10, 199)); 
+background-image:         linear-gradient(top, rgb(19, 1, 19), rgb(199, 10, 199));
 }
 .blue-gradient{
     background-image: linear-gradient(to right, rgb(20, 23, 228), rgb(29, 38, 119));
